JDK21 Updates for windows