@@ -21,22 +21,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class identify_data_t {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG$LAYOUT.withName("olympus_exif_cfa"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("unique_id"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("OlyID"),
-        Constants$root.C_LONG$LAYOUT.withName("tiff_nifds"),
-        Constants$root.C_LONG$LAYOUT.withName("tiff_flip"),
-        Constants$root.C_LONG$LAYOUT.withName("metadata_blocks"),
-        MemoryLayout.paddingLayout(32)
-    ).withName("identify_data_t");
     public static MemoryLayout $LAYOUT() {
-        return identify_data_t.$struct$LAYOUT;
+        return constants$94.const$1;
     }
-    static final VarHandle olympus_exif_cfa$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("olympus_exif_cfa"));
     public static VarHandle olympus_exif_cfa$VH() {
-        return identify_data_t.olympus_exif_cfa$VH;
+        return constants$94.const$2;
     }
     /**
      * Getter for field:
@@ -45,7 +34,7 @@ public class identify_data_t {
      * }
      */
     public static int olympus_exif_cfa$get(MemorySegment seg) {
-        return (int)identify_data_t.olympus_exif_cfa$VH.get(seg);
+        return (int)constants$94.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -54,17 +43,16 @@ public class identify_data_t {
      * }
      */
     public static void olympus_exif_cfa$set(MemorySegment seg, int x) {
-        identify_data_t.olympus_exif_cfa$VH.set(seg, x);
+        constants$94.const$2.set(seg, x);
     }
     public static int olympus_exif_cfa$get(MemorySegment seg, long index) {
-        return (int)identify_data_t.olympus_exif_cfa$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$94.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void olympus_exif_cfa$set(MemorySegment seg, long index, int x) {
-        identify_data_t.olympus_exif_cfa$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$94.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle unique_id$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("unique_id"));
     public static VarHandle unique_id$VH() {
-        return identify_data_t.unique_id$VH;
+        return constants$94.const$3;
     }
     /**
      * Getter for field:
@@ -73,7 +61,7 @@ public class identify_data_t {
      * }
      */
     public static long unique_id$get(MemorySegment seg) {
-        return (long)identify_data_t.unique_id$VH.get(seg);
+        return (long)constants$94.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -82,17 +70,16 @@ public class identify_data_t {
      * }
      */
     public static void unique_id$set(MemorySegment seg, long x) {
-        identify_data_t.unique_id$VH.set(seg, x);
+        constants$94.const$3.set(seg, x);
     }
     public static long unique_id$get(MemorySegment seg, long index) {
-        return (long)identify_data_t.unique_id$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$94.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void unique_id$set(MemorySegment seg, long index, long x) {
-        identify_data_t.unique_id$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$94.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle OlyID$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("OlyID"));
     public static VarHandle OlyID$VH() {
-        return identify_data_t.OlyID$VH;
+        return constants$94.const$4;
     }
     /**
      * Getter for field:
@@ -101,7 +88,7 @@ public class identify_data_t {
      * }
      */
     public static long OlyID$get(MemorySegment seg) {
-        return (long)identify_data_t.OlyID$VH.get(seg);
+        return (long)constants$94.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -110,17 +97,16 @@ public class identify_data_t {
      * }
      */
     public static void OlyID$set(MemorySegment seg, long x) {
-        identify_data_t.OlyID$VH.set(seg, x);
+        constants$94.const$4.set(seg, x);
     }
     public static long OlyID$get(MemorySegment seg, long index) {
-        return (long)identify_data_t.OlyID$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$94.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void OlyID$set(MemorySegment seg, long index, long x) {
-        identify_data_t.OlyID$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$94.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle tiff_nifds$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tiff_nifds"));
     public static VarHandle tiff_nifds$VH() {
-        return identify_data_t.tiff_nifds$VH;
+        return constants$94.const$5;
     }
     /**
      * Getter for field:
@@ -129,7 +115,7 @@ public class identify_data_t {
      * }
      */
     public static int tiff_nifds$get(MemorySegment seg) {
-        return (int)identify_data_t.tiff_nifds$VH.get(seg);
+        return (int)constants$94.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -138,17 +124,16 @@ public class identify_data_t {
      * }
      */
     public static void tiff_nifds$set(MemorySegment seg, int x) {
-        identify_data_t.tiff_nifds$VH.set(seg, x);
+        constants$94.const$5.set(seg, x);
     }
     public static int tiff_nifds$get(MemorySegment seg, long index) {
-        return (int)identify_data_t.tiff_nifds$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$94.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void tiff_nifds$set(MemorySegment seg, long index, int x) {
-        identify_data_t.tiff_nifds$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$94.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle tiff_flip$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tiff_flip"));
     public static VarHandle tiff_flip$VH() {
-        return identify_data_t.tiff_flip$VH;
+        return constants$95.const$0;
     }
     /**
      * Getter for field:
@@ -157,7 +142,7 @@ public class identify_data_t {
      * }
      */
     public static int tiff_flip$get(MemorySegment seg) {
-        return (int)identify_data_t.tiff_flip$VH.get(seg);
+        return (int)constants$95.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -166,17 +151,16 @@ public class identify_data_t {
      * }
      */
     public static void tiff_flip$set(MemorySegment seg, int x) {
-        identify_data_t.tiff_flip$VH.set(seg, x);
+        constants$95.const$0.set(seg, x);
     }
     public static int tiff_flip$get(MemorySegment seg, long index) {
-        return (int)identify_data_t.tiff_flip$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$95.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void tiff_flip$set(MemorySegment seg, long index, int x) {
-        identify_data_t.tiff_flip$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$95.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle metadata_blocks$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("metadata_blocks"));
     public static VarHandle metadata_blocks$VH() {
-        return identify_data_t.metadata_blocks$VH;
+        return constants$95.const$1;
     }
     /**
      * Getter for field:
@@ -185,7 +169,7 @@ public class identify_data_t {
      * }
      */
     public static int metadata_blocks$get(MemorySegment seg) {
-        return (int)identify_data_t.metadata_blocks$VH.get(seg);
+        return (int)constants$95.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -194,20 +178,20 @@ public class identify_data_t {
      * }
      */
     public static void metadata_blocks$set(MemorySegment seg, int x) {
-        identify_data_t.metadata_blocks$VH.set(seg, x);
+        constants$95.const$1.set(seg, x);
     }
     public static int metadata_blocks$get(MemorySegment seg, long index) {
-        return (int)identify_data_t.metadata_blocks$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$95.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void metadata_blocks$set(MemorySegment seg, long index, int x) {
-        identify_data_t.metadata_blocks$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$95.const$1.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
